--- a/MobileGPT_app/app/src/main/res/layout/ask_overlay.xml
+++ b/MobileGPT_app/app/src/main/res/layout/ask_overlay.xml
@@ -9,7 +9,7 @@
         android:id="@+id/overlay_text"
         android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
-        android:text="Test Fluid" />
+        android:text="Test MobileGPT" />
 
     <LinearLayout
         android:id="@+id/question_answer_box"
